增加显示菜单

--- a/src/main/res/layout/main_activity.xml
+++ b/src/main/res/layout/main_activity.xml
@@ -12,8 +12,31 @@
         >
 
     </include>
-    <com.feasttime.widget.jazzyviewpager.JazzyViewPager
-        android:id="@+id/main_menu_viewpager"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        >
+        <Button
+            android:id="@+id/main_activity_left_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Left"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            />
+        <com.feasttime.widget.jazzyviewpager.JazzyViewPager
+            android:id="@+id/main_menu_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <Button
+            android:id="@+id/main_activity_right_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Right"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            />
+    </RelativeLayout>
+
 </LinearLayout>
