--- a/src/main/res/layout/title_bar_layout.xml
+++ b/src/main/res/layout/title_bar_layout.xml
@@ -16,6 +16,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/title_bar_bg"
+        android:gravity="center_vertical"
+        android:paddingLeft="30dp"
         android:layout_height="60dp">
 
     </LinearLayout>
