--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="holo_blue">#FF33E5B5</color>
+    <color name="red">#D10017</color>
+    <color name="dark_gray">#302b27</color>
 </resources>
