--- a/src/main/res/layout/main_activity.xml
+++ b/src/main/res/layout/main_activity.xml
@@ -8,10 +8,25 @@
     <include
         layout="@layout/title_bar_layout"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        >
-
+        android:layout_width="match_parent">
     </include>
+
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#987898"
+        android:gravity="center_horizontal">
+        <RadioGroup
+            android:id="@+id/menu_item_layout_viewpage_indicate_rg"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </RadioGroup>
+    </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
