--- a/src/main/res/drawable/gray_cycle_shape.xml
+++ b/src/main/res/drawable/gray_cycle_shape.xml
@@ -3,4 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@color/dark_gray"/>
+
+    <!-- 描边 -->
+    <stroke
+        android:width="2dp"
+        android:color="#00000000" /> <!-- 定义描边的宽度和描边的颜色值 -->
 </shape>
