--- a/src/main/res/layout/menu_item_layout.xml
+++ b/src/main/res/layout/menu_item_layout.xml
@@ -6,11 +6,19 @@
     android:padding="10dp"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/menu_item_layout_dishes_iv"
+    <LinearLayout
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@mipmap/ic_launcher" />
+        android:orientation="horizontal"
+        android:gravity="center"
+        >
+        <ImageView
+            android:id="@+id/menu_item_layout_dishes_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_launcher" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
