增加进入广告按钮

--- a/src/main/res/layout/main_activity.xml
+++ b/src/main/res/layout/main_activity.xml
@@ -59,7 +59,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-
+                <Button
+                    android:id="@+id/toTheAdBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="进入广告"
+                    />
     </RelativeLayout>
 
 </LinearLayout>
