--- a/src/main/res/layout/title_bar_layout.xml
+++ b/src/main/res/layout/title_bar_layout.xml
@@ -1,24 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="44dp"
-    android:orientation="vertical"
-
+    android:layout_height="wrap_content"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
    >
+
+
+    <LinearLayout
+        android:id="@+id/title_bar_cart_ll"
+        android:layout_width="85dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        >
+
+        <ImageButton
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:src="@mipmap/cart_icon"
+            android:background="@drawable/right_menu_bg"
+            android:foregroundGravity="center"
+            />
+
+    </LinearLayout>
+
     <RelativeLayout
+        android:layout_toLeftOf="@+id/title_bar_cart_ll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="44dp"
         android:layout_marginLeft="85dp"
-        android:layout_marginRight="85dp"
         >
         <LinearLayout
             android:id="@+id/title_bar_content_ll"
             android:layout_width="match_parent"
             android:orientation="horizontal"
-
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:background="@drawable/title_bar_bg"
             android:gravity="center_vertical"
             android:paddingLeft="30dp"
@@ -37,4 +55,6 @@
 
 
 
-</LinearLayout>
+
+
+</RelativeLayout>
