--- a/src/main/res/layout/title_bar_layout.xml
+++ b/src/main/res/layout/title_bar_layout.xml
@@ -33,16 +33,18 @@
         android:layout_height="44dp"
         android:layout_marginLeft="85dp"
         >
-        <LinearLayout
-            android:id="@+id/title_bar_content_ll"
+        <RadioGroup
+            android:id="@+id/title_bar_content_rb"
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:background="@drawable/title_bar_bg"
             android:gravity="center_vertical"
-            android:paddingLeft="30dp"
+            android:paddingTop="0dp"
+            android:paddingBottom="0dp"
+            android:paddingLeft="0dp"
             android:layout_height="44dp">
 
-        </LinearLayout>
+        </RadioGroup>
         <ImageButton
             android:layout_width="44dp"
             android:layout_height="44dp"
