--- a/src/main/res/layout/menu_item_layout.xml
+++ b/src/main/res/layout/menu_item_layout.xml
@@ -7,8 +7,8 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         android:orientation="horizontal"
         android:gravity="center"
         >
@@ -16,6 +16,7 @@
             android:id="@+id/menu_item_layout_dishes_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scaleType="centerInside"
             android:src="@mipmap/ic_launcher" />
     </LinearLayout>
 
@@ -23,6 +24,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -41,6 +43,7 @@
             android:src="@mipmap/ic_launcher" />
 
         <ImageView
+            android:id="@+id/menu_item_layout_ad_flag_iv"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@mipmap/ic_launcher" />
