--- a/src/main/res/layout/main_activity.xml
+++ b/src/main/res/layout/main_activity.xml
@@ -13,7 +13,6 @@
     </include>
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -24,8 +23,7 @@
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
+            android:padding="0dp"
             >
         </RadioGroup>
     </LinearLayout>
