--- a/src/main/res/layout/title_bar_layout.xml
+++ b/src/main/res/layout/title_bar_layout.xml
@@ -39,10 +39,9 @@
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            android:paddingTop="0dp"
-            android:paddingBottom="0dp"
-            android:paddingLeft="0dp"
-            android:layout_height="44dp">
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:layout_height="match_parent">
 
         </RadioGroup>
         <ImageButton
@@ -51,6 +50,7 @@
             android:src="@mipmap/right_menu_icon"
             android:background="@drawable/right_menu_bg"
             android:layout_alignParentRight="true"
+            android:paddingRight="0dp"
             android:layout_centerVertical="true"
             />
     </RelativeLayout>
