--- a/src/main/res/layout/title_bar_layout.xml
+++ b/src/main/res/layout/title_bar_layout.xml
@@ -18,6 +18,7 @@
         >
 
         <ImageButton
+            android:id="@+id/title_bar_cart_ib"
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:src="@mipmap/cart_icon"
