--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="title_bar_normal_color">#483B37</color>
     <color name="title_bar_selected_color">#322A27</color>
     <color name="transparent">#00000000</color>
+
+
+
+    <color name="text_color_dark_gray">#373737</color>
 </resources>
