--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="very_big_text_size">20dp</dimen>
     <dimen name="big_text_size">15dp</dimen>
+    <dimen name="normal_text_size">13dp</dimen>
+    <dimen name="small_text_size">10dp</dimen>
+    <dimen name="very_small_text_size">8dp</dimen>
 </resources>
