--- a/src/main/res/layout/recommend_activity.xml
+++ b/src/main/res/layout/recommend_activity.xml
@@ -91,17 +91,47 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
-                    <RatingBar
+                    <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="10dp"
-                        android:numStars="5"
-                        android:rating="5"
-                        style="@style/RecommendRatingBar"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/normal_text_size"
+                        android:textColor="@color/text_color_dark_gray"
+                        android:text="菜品星级"
                         />
 
+                    <LinearLayout
+                        android:id="@+id/recommend_activity_dishes_level_ll"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:orientation="horizontal">
+
+                    </LinearLayout>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/normal_text_size"
+                        android:textColor="@color/text_color_dark_gray"
+                        android:text="菜品辣度"
+                        android:layout_marginLeft="20dp"
+                        />
+                    <LinearLayout
+                        android:id="@+id/recommend_activity_hot_level_ll"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:orientation="horizontal">
+
+                    </LinearLayout>
+
                 </LinearLayout>
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -110,6 +140,7 @@
                     android:drawableLeft="@mipmap/head_icon"
                     android:textSize="@dimen/normal_text_size"
                     android:drawablePadding="10dp"
+                    android:textColor="@color/text_color_dark_gray"
                     />
 
                 <TextView
@@ -120,6 +151,7 @@
                     android:textSize="@dimen/normal_text_size"
                     android:drawablePadding="10dp"
                     android:layout_marginTop="5dp"
+                    android:textColor="@color/text_color_dark_gray"
                     />
             </LinearLayout>
 
