--- a/src/main/res/layout/recommend_activity.xml
+++ b/src/main/res/layout/recommend_activity.xml
@@ -160,9 +160,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#698548"
             android:orientation="vertical">
-
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recommend_activity_menu_list_rv"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </LinearLayout>
 
     </LinearLayout>
