--- a/src/main/res/layout/main_activity.xml
+++ b/src/main/res/layout/main_activity.xml
@@ -68,6 +68,13 @@
                     android:layout_height="wrap_content"
                     android:text="进入广告"
                     />
+
+        <FrameLayout
+            android:id="@+id/main_activity_my_order_container_fl"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </FrameLayout>
     </RelativeLayout>
 
 </LinearLayout>
