--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="title_bar_selected_color">#322A27</color>
     <color name="transparent">#00000000</color>
     <color name="my_red">#D10017</color>
-
+    <color name="transparent_gray">#cc302b27</color>
 
     <color name="text_color_dark_gray">#373737</color>
     <color name="text_color_gray">#332a27</color>
