--- a/src/main/res/layout/end_activity.xml
+++ b/src/main/res/layout/end_activity.xml
@@ -287,33 +287,11 @@
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal"
                 >
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/temp_line_1"
-                    android:layout_weight="1"
-                    />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/temp_line_1"
-                    android:layout_weight="1"
-                    />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/temp_line_1"
-                    android:layout_weight="1"
-                    />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/temp_line_1"
-                    android:layout_weight="1"
-                    />
+               <com.feasttime.widget.chart.LineChart01View
+                   android:layout_width="100dp"
+                   android:layout_height="100dp"
+                   android:layout_gravity="center_vertical"
+                   />
             </LinearLayout>
 
             <TextView
