--- a/src/main/res/layout/end_activity.xml
+++ b/src/main/res/layout/end_activity.xml
@@ -284,14 +284,32 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="0dp"
                 android:orientation="horizontal"
                 >
                <com.feasttime.widget.chart.LineChart01View
-                   android:layout_width="100dp"
-                   android:layout_height="100dp"
-                   android:layout_gravity="center_vertical"
+                   android:layout_width="match_parent"
+                   android:layout_height="180dp"
+                   android:layout_weight="1"
                    />
+
+                <com.feasttime.widget.chart.LineChart01View
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_weight="1"
+                    />
+
+                <com.feasttime.widget.chart.LineChart01View
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_weight="1"
+                    />
+
+                <com.feasttime.widget.chart.LineChart01View
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_weight="1"
+                    />
             </LinearLayout>
 
             <TextView
@@ -300,7 +318,7 @@
                 android:text="健康分析:"
                 android:textColor="@color/text_color_dark_gray"
                 android:textSize="@dimen/big_text_size"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
                 />
 
             <LinearLayout
@@ -315,11 +333,9 @@
                     android:orientation="vertical"
                     >
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/temp_line_7"
-                        />
+                    <com.feasttime.widget.chart.MultiBarChart01View
+                        android:layout_width="300dp"
+                        android:layout_height="180dp" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -370,7 +386,6 @@
 
 
         </LinearLayout>
-
 
 
     </LinearLayout>
