修改末页图

--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="transparent">#00000000</color>
     <color name="my_red">#D10017</color>
     <color name="transparent_gray">#cc302b27</color>
+    <color name="small_black">#BBB5AD</color>
 
     <color name="text_color_dark_gray">#373737</color>
     <color name="text_color_gray">#332a27</color>
