--- a/src/main/res/layout/end_activity.xml
+++ b/src/main/res/layout/end_activity.xml
@@ -281,108 +281,167 @@
                     />
             </LinearLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:orientation="horizontal"
-                >
-               <com.feasttime.widget.chart.LineChart01View
-                   android:layout_width="match_parent"
-                   android:layout_height="180dp"
-                   android:layout_weight="1"
-                   />
-
-                <com.feasttime.widget.chart.LineChart01View
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:layout_weight="1"
-                    />
-
-                <com.feasttime.widget.chart.LineChart01View
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:layout_weight="1"
-                    />
-
-                <com.feasttime.widget.chart.LineChart01View
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:layout_weight="1"
-                    />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="健康分析:"
-                android:textColor="@color/text_color_dark_gray"
-                android:textSize="@dimen/big_text_size"
-                android:layout_marginTop="5dp"
-                />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-
+                android:layout_height="wrap_content">
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:layout_marginTop="0dp"
+                    android:orientation="horizontal"
                     >
-
-                    <com.feasttime.widget.chart.MultiBarChart01View
-                        android:layout_width="300dp"
-                        android:layout_height="180dp" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/big_text_size"
-                        android:textColor="@color/text_color_dark_gray"
-                        android:text="消费分析"
-                        />
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="60dp"
-                    >
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/temp_line_6"
-                        />
-
-                    <RelativeLayout
+                    <com.feasttime.widget.chart.LineChart01View
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="@dimen/normal_text_size"
-                            android:textColor="@color/text_color_dark_gray"
-                            android:layout_alignParentLeft="true"
-                            android:text="上月外出就餐"
-                            />
+                        android:layout_height="180dp"
+                        android:layout_weight="1"
+                        />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="@dimen/normal_text_size"
-                            android:textColor="@color/text_color_dark_gray"
-                            android:layout_alignParentRight="true"
-                            android:text="本月外出就餐"
-                            />
-                    </RelativeLayout>
+                    <com.feasttime.widget.chart.LineChart01View
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        android:layout_weight="1"
+                        />
+
+                    <com.feasttime.widget.chart.LineChart01View
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        android:layout_weight="1"
+                        />
+
+                    <com.feasttime.widget.chart.LineChart01View
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        android:layout_weight="1"
+                        />
                 </LinearLayout>
 
-            </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="健康分析:"
+                    android:textColor="@color/text_color_dark_gray"
+                    android:textSize="@dimen/big_text_size"
+                    android:layout_marginTop="5dp"
+                    />
+
+
+                    <LinearLayout
+                        android:id="@+id/end_activity_multibarchart_ll"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="150dp"
+                        android:orientation="vertical"
+                        >
+
+                        <com.feasttime.widget.chart.MultiBarChart01View
+                            android:layout_width="300dp"
+                            android:layout_height="180dp" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/big_text_size"
+                            android:textColor="@color/text_color_dark_gray"
+                            android:layout_marginLeft="20dp"
+                            android:text="消费分析"
+                            />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginTop="210dp"
+                        android:layout_marginLeft="60dp"
+                        android:layout_toRightOf="@+id/end_activity_multibarchart_ll"
+                        >
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/last_month_chart_wrap_ll"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_horizontal"
+                                android:orientation="vertical"
+                                >
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="0%"
+                                    android:textColor="@color/holo_blue"
+                                    android:textSize="@dimen/big_text_size"
+                                    />
+
+                                <LinearLayout
+                                    android:id="@+id/end_activity_last_month_eat_chart_ll"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="10dp"
+                                    android:orientation="vertical"
+                                    >
+
+
+                                </LinearLayout>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="@dimen/normal_text_size"
+                                    android:textColor="@color/text_color_dark_gray"
+                                    android:text="上月外出就餐"
+                                    />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_toRightOf="@+id/last_month_chart_wrap_ll"
+                                android:orientation="vertical"
+                                android:layout_marginLeft="25dp"
+                                android:gravity="center_horizontal"
+                                >
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="0%"
+                                    android:textColor="@color/holo_blue"
+                                    android:textSize="@dimen/big_text_size"
+                                    />
+                                <LinearLayout
+                                    android:id="@+id/end_activity_this_month_eat_chart_ll"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="10dp"
+                                    android:orientation="vertical"
+                                    >
+
+
+                                </LinearLayout>
+
+
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="@dimen/normal_text_size"
+                                    android:textColor="@color/text_color_dark_gray"
+                                    android:layout_alignParentRight="true"
+                                    android:text="本月外出就餐"
+                                    />
+
+                            </LinearLayout>
+
+                        </RelativeLayout>
+                    </LinearLayout>
+
+
+            </RelativeLayout>
 
 
         </LinearLayout>
