--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="my_red">#D10017</color>
     <color name="transparent_gray">#cc302b27</color>
     <color name="small_black">#BBB5AD</color>
+    <color name="small_gray">#DCDDDC</color>
 
     <color name="text_color_dark_gray">#373737</color>
     <color name="text_color_gray">#332a27</color>
