--- a/src/main/res/layout/main_activity.xml
+++ b/src/main/res/layout/main_activity.xml
@@ -1,80 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_bg_color"
-    android:orientation="vertical">
+    android:background="@color/main_bg_color">
 
     <include
+        android:id="@+id/main_activity_title_bar"
         layout="@layout/title_bar_layout"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
     </include>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/transparent"
-        android:gravity="center_horizontal">
-        <RadioGroup
-            android:id="@+id/menu_item_layout_viewpage_indicate_rg"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="0dp"
-            >
-        </RadioGroup>
-    </LinearLayout>
+   <FrameLayout
+       android:id="@+id/main_fragment_container_fl"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        >
-        <ImageButton
-            android:id="@+id/main_activity_left_ib"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@mipmap/left_arrow"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            />
-
-        <ImageButton
-            android:id="@+id/main_activity_right_ib"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@mipmap/right_arrow"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            />
+   </FrameLayout>
 
 
-        <com.feasttime.widget.jazzyviewpager.JazzyViewPager
-            android:id="@+id/main_menu_viewpager"
-            android:layout_toLeftOf="@+id/main_activity_right_ib"
-            android:layout_toRightOf="@+id/main_activity_left_ib"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
 
-                <Button
-                    android:id="@+id/toTheAdBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="进入广告"
-                    />
-
-        <FrameLayout
-            android:id="@+id/main_activity_my_order_container_fl"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </FrameLayout>
-    </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
