--- a/src/main/res/layout/my_order_fragment.xml
+++ b/src/main/res/layout/my_order_fragment.xml
@@ -2,9 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent_gray"
+
     android:orientation="vertical">
 
+    <LinearLayout
+        android:id="@+id/my_order_content_ll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/transparent_gray"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginBottom="10dp"
+        android:orientation="vertical"
+        >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -95,4 +106,8 @@
             </RelativeLayout>
 
         </LinearLayout>
+
+    </LinearLayout>
+
+
 </LinearLayout>
