--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -15,6 +15,9 @@
     <color name="transparent_gray">#cc302b27</color>
     <color name="small_black">#BBB5AD</color>
     <color name="small_gray">#DCDDDC</color>
+    <color name="orange_color">#796115</color>
+
+
 
     <color name="text_color_dark_gray">#373737</color>
     <color name="text_color_gray">#332a27</color>
